# MockStocks

./: .all-contributorsrc  .env.default  .gitignore  .gitlab-ci.yml  .sops.yaml  Cargo.toml  DOCS.md  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  secrets.enc.env
.cargo/: config.toml
.cargo/model/crypt/: pwd.rs
.cargo/model/router/: mod.rs
.cargo/model/utils/: mod.rs
.cargo/router/: mw_auth.rs
.cargo/utils/: telemetry.rs
frontend/: Dockerfile.dev  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwindcss.config.js  vite.config.js
frontend/src/: App.jsx  api_wrapper.jsx  auth_context.jsx  index.css  main.jsx
frontend/src/components/: BuyingAndSelling.jsx  ChangePwd.jsx  DisplayBalance.jsx  Login.jsx  LogoutButton.jsx  LogoutEveryWhere.jsx  NavBar.jsx  ProfileDisplay.jsx  ProfilePicture.jsx  RecentTrades.jsx  Register.jsx  SideNav.jsx  StockCard.jsx  StocksSearchBar.jsx  TradesSearchBar.jsx  TradingChart.jsx  UserNavBar.jsx  oAuthButton.jsx  telemetry.jsx  userManagment.jsx
frontend/src/components/admin/: telemetry.jsx  userManagment.jsx
frontend/src/components/auth/: ChangePassowrdForm.jsx  ChangePwd.jsx  Login.jsx  LoginForm.jsx  LogoutButton.jsx  LogoutEveryWhere.jsx  Register.jsx  RegisterForm.jsx  oAuthButton.jsx
frontend/src/components/general/: Modal.jsx  TeamMemberCard.jsx
frontend/src/components/layout/: DisplayBalance.jsx  NavBar.jsx  ProfileDisplay.jsx  SideNav.jsx  UserNavBar.jsx
frontend/src/components/trading/: AreaChart.jsx  BuyingAndSelling.jsx  CandleChart.jsx  HoldingsTable.jsx  RecentTrades.jsx  RecentsTable.jsx  StockCard.jsx  StocksSearchBar.jsx  SummaryModal.jsx  TradeForm.jsx  TradesSearchBar.jsx  TradingChart.jsx  fetchTrades.js
frontend/src/components/ui/: Button.jsx  Modal.jsx  Table.jsx  TeamMemberCard.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: useApi.jsx
frontend/src/pages/: Dashboard.jsx  LandingPage.jsx  LangingPage.jsx  Login.jsx  NotFound.jsx  Register.jsx  Test.jsx  TradingPage.jsx
frontend/src/pages/logged-in/: Account.jsx  Dashboard.jsx  RecentTrades.jsx  TradingPage.jsx
frontend/src/pages/logged-in/admin/: AdminPage.jsx
frontend/src/pages/public/: About.jsx  Authentication.jsx  Landing.jsx  NotFound.jsx
grafana/dashboards/: dash.json
grafana/provisioning/dashboards/: dashboards.yaml
services/auth_service/: Cargo.toml  Dockerfile  Dockerfile.dev
services/auth_service/src/: config.rs  error.rs  main.rs
services/auth_service/src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
services/auth_service/src/jwt/: error.rs  mod.rs  refresh_token.rs  token_util.rs
services/auth_service/src/model/: error.rs  mod.rs  redis_csrf.rs  redis_token.rs  users_model.rs
services/auth_service/src/oAuth/: error.rs  mod.rs  oAuth_client.rs  oAuth_url.rs  oauth_autherized.rs
services/auth_service/src/oauth/: error.rs  mod.rs  o_auth_client.rs  o_auth_url.rs  oauth_autherized.rs
services/auth_service/src/router/: error.rs  mod.rs  routes_admin.rs  routes_login.rs  routes_user.rs
services/auth_service/src/utils/: cookie_util.rs
services/gateway/: Cargo.toml  Dockerfile  Dockerfile.dev
services/gateway/src/: config.rs  main.rs
services/gateway/src/proxy_client/: error.rs  mod.rs  proxy_utils.rs
services/gateway/src/router/: error.rs  mod.rs  mw_auth.rs  router_api.rs  router_auth.rs  router_grafana.rs  router_static.rs
services/gateway/src/token/: error.rs  mod.rs  token.rs
services/gateway/src/utils/: dns.rs  error.rs  mod.rs  proxy_utils.rs  url_format.rs
services/gateway/tests/: dev.rs
services/stocks_api_service/: Cargo.toml  Dockerfile  Dockerfile.dev
services/stocks_api_service/src/: main.rs
services/stocks_api_service/src/router/: mod.rs  routes_stocks.rs
services/stocks_api_service/src/services/: error.rs  mod.rs  stocks_service.rs
services/stocks_api_service/src/stocks_service/: error.rs  mod.rs  stocks_service.rs
services/stocks_api_service/src/yahoo_service/: mod.rs  yahoo_service.rs
services/user_service/: Cargo.toml  Dockerfile  Dockerfile.dev
services/user_service/src/: config.rs  main.rs
services/user_service/src/model/: error.rs  holdings.rs  mod.rs  transactions.rs  user.rs
services/user_service/src/router/: admin_routes.rs  error.rs  mod.rs  requests.rs  user_routes.rs
shared/_dev_utils/: Cargo.toml
shared/_dev_utils/src/: lib.rs  main.rs
shared/_dev_utils/src/_dev_db/: db_setup.rs  mod.rs
shared/_dev_utils/src/_dev_db/sql/: init_db.sql  populate_db.sql
shared/_dev_utils/src/model/: error.rs  holdings_model.rs
shared/shared_utils/: Cargo.toml
shared/shared_utils/src/: lib.rs
shared/shared_utils/src/ctx/: error.rs  mod.rs
shared/telemetry/: Cargo.toml
shared/telemetry/src/: lib.rs  metrics.rs  telemetry.rs  tracing_propegation.rs
sql/: clear_db.sql  init_db.sql  populate_db.sql
src/: main.rs
src/_dev_utils/: db_setup.rs
src/ctx/: mod.rs
src/model/: error.rs  mod.rs  usersModel.rs  users_model.rs
src/model/crypt/: error.rs
src/model/router/: error.rs
src/router/: error.rs  mod.rs  mw_auth.rs  routes_login.rs
src/service/: stocks_service.rs
src/services/: mod.rs  stocks_service.rs
tests/: dev.rs
view/: index.html
view/assets/: index-BO4meZgV.css  index-C0apn_zy.js  index-CANDkoj6.css  index-CFS6vk_M.js
