[workspace]
resolver = "3"
members = [
	"services/gateway",
	"services/auth_service",
	"shared/_dev_utils",
	"shared/telemetry",
	"shared/shared_utils",
        "services/stocks_api_service",
	"services/user_service"
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"

[workspace.dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tower = { version = "0.5.2", features = ["tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = { version = "0.1.41", features = ["std", "attributes"] }
