[package]
name = "auth_service"
default-run = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
tower-cookies = "0.11.0"
argon2 = { version = "0.5.3", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
telemetry = {path = "../../shared/telemetry"}
shared_utils = {path = "../../shared/shared_utils"}
config = "0.15.11"
oauth2 = "5.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
