[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true # = { version = "1.44.2", features = ["rt-multi-thread"] }
tower.workspace = true # = { version = "0.5.2", features = ["tracing"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "tracing"] }
tower-cookies = "0.11.0"
reqwest = "0.12.15"
hyper = "1.6.0"
http-body-util = "0.1.3"
telemetry = {path = "../../shared/telemetry"}

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
serde_json = "1.0.140"
