[package]
name = "gateway"
default-run = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tower-http = { version = "0.6.2", features = ["fs", "trace", "tracing", "cors"] }
tower-cookies = "0.11.0"
reqwest = "0.12.15"
hyper = "1.6.0"
http-body-util = "0.1.3"
telemetry = {path = "../../shared/telemetry"}
shared_utils = {path = "../../shared/shared_utils"}
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
config = "0.15.11"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
serde_json = "1.0.140"
