[package]
name = "stocks_api_service"
default-run = "stocks_api_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
chrono = "0.4.40"
futures = "0.3.31"
time = "0.3.41"
yahoo_finance_api = "3.0.0"
telemetry = {path = "../../shared/telemetry"}
