[package]
name = "stocks_api_service"
default-run = "stocks_api_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
chrono = "0.4.40"
futures = "0.3.31"
time = "0.3.41"
yahoo_finance_api = "3.0.0"
telemetry = {path = "../../shared/telemetry"}
reqwest = "0.12.15"
serde_json = "1.0.140"
moka = { version = "0.12.10", features = ["sync"] }
once_cell = "1.21.3"
tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
