[package]
name = "stocks_api_service"
default-run = "stocks_api_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
telemetry = {path = "../../shared/telemetry"}
chrono = "0.4.41"
serde_json = "1.0.140"
time = "0.3.41"
yahoo_finance_api = "3.0.0"
futures = "0.3.31"
tower-http = { version = "0.6.2", features = ["trace", "tracing", "cors"] }
surf = "2.3.2"
hyper = "1.6.0"
