[package]
name = "user_service"
default-run = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.37.1"
chrono = "0.4.41"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "rust_decimal", "uuid"] }
uuid = "1.16.0"
shared_utils = {path = "../../shared/shared_utils"}
axum.workspace = true
