[package]
name = "telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry = "0.29.1"
opentelemetry_sdk = "0.29.0"
opentelemetry-otlp = "0.29.0"
opentelemetry-stdout = "0.29.0"
opentelemetry-appender-tracing = "0.29.1"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
